--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
   overflow: hidden;
   /* max-width: 645px; */
   max-width: 600px;
+  margin-bottom: 20px;
 }
 
 @media (min-width: 645px) {
