--- a/style.css
+++ b/style.css
@@ -166,7 +166,7 @@ body {
   font-weight: var(--fw-bold);
   font-size: 2rem;
   line-height: 2rem;
-  margin: 0;
+  /* margin: 0; */
 }
 
 .price .product__original-price {
@@ -175,7 +175,7 @@ body {
   font-size: 0.8125rem;
   line-height: 1.4375rem;
   text-decoration-line: strikethrough;
-  margin: 0;
+  /* margin: 0; */
 }
 
 /* button */
